--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,8 @@
     <string name="action_settings">Settings</string>
     <string name="logout">Logout</string>
 
-
     //welcome screen
     <string name="agree_n_continue">Tap "Agree and continue" to accept the WhatsApp Terms of Service and Privacy Policy.</string>
-
 
     //verify screen
     <string name="verify_phone_msg">WhatsApp will send and SMS message to verify your phone number. Enter your country code and phone number.</string>
@@ -14,12 +12,13 @@
         <item>India</item>
     </string-array>
 
-
     // create user
     <string name="profile_info_msg">Please provide your name and an optional profile photo</string>
 
-
     // user list  screen
     <string name="activity_user_list_label">Select a contact</string>
-
+    <string name="search_chat">Search chat</string>
+    <string name="chat">Chat</string>
+    <string name="status">Status</string>
+    <string name="call">Call</string>
 </resources>
